add avatar complaints list

--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -82,7 +82,7 @@
 
 <!--Mobile Public-->
 <div *ngIf="isDataAvailable && isMobile && !isPrivate " >
-  <public-complaints>Nes</public-complaints>
+  <public-complaints></public-complaints>
 </div>
 
 
