--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -79,7 +79,7 @@
 
 <!--Mobile Public-->
 <div *ngIf="isDataAvailable && isMobile && !isPrivate " >
-  <public-testimonials>Nes</public-testimonials>
+  <public-testimonials></public-testimonials>
 </div>
 
 <!--Mobile Private-->
