--- a/src/app/complaints/public-complaints/public-complaints.component.scss
+++ b/src/app/complaints/public-complaints/public-complaints.component.scss
@@ -38,6 +38,23 @@
       background: blueviolet;
       margin-right: 20px;
       overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+        position: relative;
+        z-index: 4;
+      }
+
+      span {
+        font-size: 20pt;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        background: #f1f1f1;
+      }
     }
 
     .dates {
