--- a/src/app/complaints/single-complaint/single-complaint.component.scss
+++ b/src/app/complaints/single-complaint/single-complaint.component.scss
@@ -83,6 +83,24 @@
         background: blueviolet;
         margin-right: 20px;
         overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+          position: relative;
+          z-index: 4;
+        }
+
+        span {
+          font-size: 20pt;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          background: #f1f1f1;
+        }
+
       }
 
       .dates {
@@ -238,6 +256,24 @@
         background: blueviolet;
         margin-right: 20px;
         overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+          position: relative;
+          z-index: 4;
+        }
+
+        span {
+          font-size: 20pt;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          background: #f1f1f1;
+        }
+
       }
 
       .dates {
