--- a/src/app/testimonials/public-testimonials/public-testimonials.component.html
+++ b/src/app/testimonials/public-testimonials/public-testimonials.component.html
@@ -6,7 +6,17 @@
     <div class="crdlst">
       <mat-card *ngFor="let card of cards">
         <div class="set-12 crdh">
-          <button type="button" class="avatar"></button>
+          <button type="button" class="avatar">
+            <img
+            src="{{ user.avatarImage }}"
+            alt="{{ user.firstname }} {{ user.lastname }}"
+            *ngIf="user.avatarImage != null"
+          />
+          <span *ngIf="user.avatarImage == null">
+            {{ user.firstname | firstword | firstletter
+            }}{{ user.lastname | firstword | firstletter }}
+          </span>
+          </button>
           <div>
             <p>
               <small *ngIf="!card['isAnonymous']">
