--- a/src/app/testimonials/public-testimonials/public-testimonials.component.scss
+++ b/src/app/testimonials/public-testimonials/public-testimonials.component.scss
@@ -125,6 +125,23 @@
         display: block;
         background: purple;
         margin-right: 10px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+          position: relative;
+          z-index: 4;
+        }
+
+        span {
+          font-size: 20pt;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          background: #f1f1f1;
+        }
       }
   
       input {
@@ -162,5 +179,24 @@
     .crdlst {
       width: 100% !important;
       margin: 0 !important;
+    }
+    .avatar{
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+        position: relative;
+        z-index: 4;
+      }
+
+      span {
+        font-size: 20pt;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        background: #f1f1f1;
+      }
     }
   }
