--- a/src/app/testimonials/single-testimonial/single-testimonial.component.scss
+++ b/src/app/testimonials/single-testimonial/single-testimonial.component.scss
@@ -39,6 +39,23 @@
         background: blueviolet;
         margin-right: 20px;
         overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 50%;
+          position: relative;
+          z-index: 4;
+        }
+
+        span {
+          font-size: 20pt;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          background: #f1f1f1;
+        }
       }
   
       .dates {
@@ -194,6 +211,23 @@
           background: blueviolet;
           margin-right: 20px;
           overflow: hidden;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+            position: relative;
+            z-index: 4;
+          }
+  
+          span {
+            font-size: 20pt;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            background: #f1f1f1;
+          }
         }
     
         .dates {
