--- a/src/app/testimonials/single-testimonial/single-testimonial.component.html
+++ b/src/app/testimonials/single-testimonial/single-testimonial.component.html
@@ -9,13 +9,13 @@
         <div class="set-12 crdh">
           <button type="button" class="avatar">
             <img
-            src="{{ user.avatarImage }}"
-            alt="{{ user.firstname }} {{ user.lastname }}"
-            *ngIf="user.avatarImage != null"
+            src="{{ card[0].avatarImage }}"
+            alt="{{ testimony?.createdBy.firstname }} {{ testimony?.createdBy.lastname }}"
+            *ngIf="card[0].avatarImage != null"
           />
-          <span *ngIf="user.avatarImage == null">
-            {{ user.firstname | firstword | firstletter
-            }}{{ user.lastname | firstword | firstletter }}
+          <span *ngIf="card[0].avatarImage == null">
+            {{ testimony?.createdBy.firstname | firstword | firstletter
+            }}{{ testimony?.createdBy.lastname | firstword | firstletter }}
           </span>
           </button>
           <div>
@@ -84,13 +84,13 @@
         <div class="set-12 crdh">
           <button type="button" class="avatar">
             <img
-            src="{{ user.avatarImage }}"
-            alt="{{ user.firstname }} {{ user.lastname }}"
-            *ngIf="user.avatarImage != null"
+            src="{{ card[0].avatarImage }}"
+            alt="{{ testimony?.createdBy.firstname }} {{ testimony?.createdBy.lastname }}"
+            *ngIf="card[0].avatarImage != null"
           />
-          <span *ngIf="user.avatarImage == null">
-            {{ user.firstname | firstword | firstletter
-            }}{{ user.lastname | firstword | firstletter }}
+          <span *ngIf="card[0].avatarImage == null">
+            {{ testimony?.createdBy.firstname | firstword | firstletter
+            }}{{ testimony?.createdBy.lastname | firstword | firstletter }}
           </span>
           </button>
           <div>
