--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -13,6 +13,8 @@
     <div class="set-12">
       <p><small>Siguenos en:</small></p>
       <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
+      <a class="icon linkedin-net" target="_blank" href="https://www.linkedin.com/company/mexicolectivo/"></a>
+      <a class="icon instagram-net" target="_blank" href="https://www.instagram.com/mexicolectivo/"></a>
     </div>
   </div>
 </div>
@@ -36,6 +38,8 @@
     <div class="set-12">
       <p><small>Siguenos en:</small></p>
       <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
+      <a class="icon linkedin-net" target="_blank" href="https://www.linkedin.com/company/mexicolectivo/"></a>
+      <a class="icon instagram-net" target="_blank" href="https://www.instagram.com/mexicolectivo/"></a>
     </div>
   </div>
 </div>
