--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -73,14 +73,14 @@
         <span>Testímonios</span>
       </button>
 
-      <button mat-menu-item (click)="popComplaintsDialog()">
+      <!-- <button mat-menu-item (click)="popComplaintsDialog()">
         <mat-icon>priority_high</mat-icon>
         <span>Denuncia</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="popTestimonialsDialog()">
         <mat-icon>record_voice_over</mat-icon>
         <span>Mi Testimonio</span>
-      </button>
+      </button> -->
       <button mat-menu-item (click)="resetPassword(user.email)">
         <mat-icon>key</mat-icon>
         <span>Cambiar contraseña</span>
