--- a/src/app/pando/users-list/users-list.component.scss
+++ b/src/app/pando/users-list/users-list.component.scss
@@ -5,9 +5,7 @@
   width: 100%;
 
   .userlist {
-    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 3px -3px grey;
   }
 
   mat-spinner {
