--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -2,41 +2,27 @@
   <mat-spinner></mat-spinner>
 </div>
 
-
-
-<div class="form-profile" *ngIf="isDataAvailable && isMobile">
+<div class="set-12 form-profile" *ngIf="isDataAvailable && isMobile">
   <h3>Mi perfil</h3>
-  <div class="avatarhldr">
-    <div class="profile">
-      <input
-        #fileInput
-        type="file"
-        (change)="openCropperDialog($event)"
-        accept="image/*"
-        hidden
-      />
+
+  <div class="set-12 avatarhldr">
+    <div class="set-12 profile">
+      <input #fileInput type="file" (change)="openCropperDialog($event)" accept="image/*" hidden />
       <button type="button" class="avatar" (click)="fileInput.click()">
-        <img
-          src="{{ user.avatarImage }}"
-          alt="{{ user.firstname }} {{ user.lastname }}"
-          *ngIf="user.avatarImage != null"
-        />
+        <img src="{{ user.avatarImage }}" alt="{{ user.firstname }} {{ user.lastname }}"
+          *ngIf="user.avatarImage != null" />
         <span *ngIf="user.avatarImage == null">
-          {{ user.firstname | firstword | firstletter
-          }}{{ user.lastname | firstword | firstletter }}
+          {{ user.firstname | firstword | firstletter }}{{ user.lastname | firstword | firstletter }}
         </span>
-        <div
-          class="overlay"
-          matTooltip="Cargar imágen"
-          matTooltipClass="tooltip"
-        >
+        <div class="overlay" matTooltip="Cargar imágen" matTooltipClass="tooltip">
           <mat-icon color="accent">photo_camera</mat-icon>
         </div>
       </button>
     </div>
   </div>
-  <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
-    <div>
+
+  <form class="set-12" [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
+    <div class="set-12">
       <mat-form-field appearance="outline">
         <mat-label>Nombre(s)</mat-label>
         <input type="text" matInput formControlName="firstname" />
@@ -55,39 +41,29 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+
       <mat-form-field appearance="outline">
         <mat-label>Código Postal</mat-label>
         <input type="text" matInput formControlName="postalcode" />
       </mat-form-field>
+
       <mat-form-field appearance="outline">
         <mat-label>Télefono</mat-label>
-        <input
-          type="text"
-          matInput
-          formControlName="phone"
-        />
+        <input type="text" matInput formControlName="phone" />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>¿Qué te hace feliz de México?</mat-label>
         <mat-chip-list #happyChipList>
-          <mat-chip
-            *ngFor="let item of happyArray"
-            (removed)="removeHappyItem(item)"
-          >
+          <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
             {{ item.name }}
             <button type="button" matChipRemove>
               <mat-icon>cancel</mat-icon>
             </button>
           </mat-chip>
-          <input
-          formControlName="associationInterests"
-            placeholder=""
-            [matChipInputFor]="happyChipList"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-            [matChipInputAddOnBlur]="addOnBlur"
-            (matChipInputTokenEnd)="addHappyItem($event)"
-          />
+          <input formControlName="associationInterests" placeholder="" [matChipInputFor]="happyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addHappyItem($event)" />
           <button type="button" matSuffix (click)="clearInputHappy()">
             <mat-icon>cancel</mat-icon>
           </button>
@@ -97,52 +73,36 @@
       <mat-form-field appearance="outline">
         <mat-label>¿Qué te entristece de México?</mat-label>
         <mat-chip-list #unhappyChipList>
-          <mat-chip
-            *ngFor="let item of unhappyArray"
-            (removed)="removeUnhappyItem(item)"
-          >
+          <mat-chip *ngFor="let item of unhappyArray" (removed)="removeUnhappyItem(item)">
             {{ item.name }}
             <button type="button" matChipRemove>
               <mat-icon>cancel</mat-icon>
             </button>
           </mat-chip>
-          <input
-            formControlName="uninterestingTopics"
-            placeholder=""
-            [matChipInputFor]="unhappyChipList"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-            [matChipInputAddOnBlur]="addOnBlur"
-            (matChipInputTokenEnd)="addUnhappyItem($event)"
-          />
+          <input formControlName="uninterestingTopics" placeholder="" [matChipInputFor]="unhappyChipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="addUnhappyItem($event)" />
           <button type="button" matSuffix (click)="clearInputUnhappy()">
             <mat-icon>cancel</mat-icon>
           </button>
         </mat-chip-list>
-        <mat-hint
-          ><small>** Presiona <strong>ENTER</strong> después de escribir algo que te
-          haga feliz entriztesca, ej:
-          <strong>"Comida o Delincuencia"</strong></small>
+        <mat-hint><small>** Presiona <strong>ENTER</strong> después de escribir algo que te
+            haga feliz entriztesca, ej:
+            <strong>"Comida o Delincuencia"</strong></small>
         </mat-hint>
       </mat-form-field>
     </div>
 
-    <mat-checkbox (change)="openDialogAssociationRegister()"  *ngIf="!checked"
-      ><mat-hint><small>¿Perteneces a una asociación?</small></mat-hint></mat-checkbox
-    >
-    <mat-checkbox (change)="openDialogAssociationRegister()"  *ngIf="checked"
-    ><mat-hint><small>¿Perteneces a una asociación?</small></mat-hint></mat-checkbox
-  >
+    <mat-checkbox (change)="openDialogAssociationRegister()" *ngIf="!checked">
+      <mat-hint><small>¿Perteneces a una asociación?</small></mat-hint>
+    </mat-checkbox>
+    <mat-checkbox (change)="openDialogAssociationRegister()" *ngIf="checked">
+      <mat-hint><small>¿Perteneces a una asociación?</small></mat-hint>
+    </mat-checkbox>
 
     <div class="ctrls">
-    
-      <button
-        class="set-12"
-        type="submit"
-        mat-raised-button
-        color="primary"
-        (click)="(onUpdateUserData)"
-        [disabled]="formGroup.invalid"
-      >
+      <button class="set-12" type="submit" mat-raised-button color="primary" (click)="(onUpdateUserData)"
+        [disabled]="formGroup.invalid">
         Actualizar
       </button>
     </div>
