--- a/src/app/hub/app-configuration/app-configuration.component.scss
+++ b/src/app/hub/app-configuration/app-configuration.component.scss
@@ -1,36 +1,37 @@
 :host {
-  padding: 20px;
+  padding: 20px 20px 90px 20px;
   width: 100%;
   height: auto;
+  float: left;
 
-
-      mat-icon {
-        font-size: 20pt;
-      }
- 
+  mat-icon {
+    font-size: 20pt;
+  }
 
   .form-profile {
-  
     mat-form-field:last-child {
       margin-bottom: 20px;
     }
-    .avatarhldr {
-      margin-bottom: 15px;
 
+    h3 {
+      text-align: center;
+    }
+
+    .avatarhldr {
       .profile {
-        height: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         .avatar {
           width: 75px;
           height: 75px;
           overflow: hidden;
           border-radius: 100%;
-          position: absolute;
-          left: 20px;
-          // transform: translateX(-50%);
           background: #ffffff;
-          top: 130px;
           border: 3px solid #ffffff;
+          margin: 10px 0 30px 0;
+          position: relative;
 
           img {
             width: 100%;
@@ -67,7 +68,6 @@
             mat-icon {
               position: relative;
               z-index: 4;
-              // color: #ffffff;
               font-size: 15pt;
             }
           }
@@ -78,6 +78,7 @@
         }
       }
     }
+
     mat-checkbox {
       margin-top: 15px;
       margin-bottom: 15px;
@@ -94,10 +95,15 @@
     .ctrls {
       display: flex;
       justify-content: center;
+    }
+  }
 
-      button {
-        margin: 0px 5px;
-      }
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, .50%);
     }
   }
 }
