--- a/src/app/hub/components/association-register/association-register.component.html
+++ b/src/app/hub/components/association-register/association-register.component.html
@@ -4,42 +4,48 @@
     <mat-step>
       <div class="set-12 dialog-head">
         <div class="set-10">
-          <h3>Aquí encuentras tu asociación</h3>
+          <h3>Búscar asociación</h3>
         </div>
+
         <div class="set-2 txt-right">
           <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
             <mat-icon>cancel</mat-icon>
           </button>
         </div>
       </div>
-      <div class="search-hldr" *ngIf="isMobile">
-        <form [formGroup]="searchFormGroup" (submit)="onSearch(searchFormGroup)">
-          <mat-form-field appearance="outline">
-            <mat-label>Buscar tu asociación</mat-label>
-            <input matInput formControlName="search" />
-            <button type="button" matSuffix (click)="clearSearchForm()">
-              <mat-icon>cancel</mat-icon>
-            </button>
-            <mat-hint><small>** Presiona <strong>ENTER O BUSCAR</strong> después de escribir
-                tu busqueda
-              </small>
-            </mat-hint>
-          </mat-form-field>
-          <div class="set-12 searchButton">
-            <button type="button" mat-raised-button color="warn" (click)="onSearch(searchFormGroup)">
-              <small>Buscar</small>
-            </button>
+
+      <div class="set-12 search-hldr" *ngIf="isMobile">
+        <form class="set-12" [formGroup]="searchFormGroup" (submit)="onSearch(searchFormGroup)">
+          <div class="set-12">
+            <mat-form-field appearance="outline">
+              <mat-label>Buscar tu asociación</mat-label>
+              <input matInput formControlName="search" />
+              <button type="button" matSuffix (click)="clearSearchForm()">
+                <mat-icon>cancel</mat-icon>
+              </button>
+              <mat-hint>
+                <small>** Presiona <strong>ENTER</strong> o <strong>BUSCAR</strong> después de escribir tu
+                  busqueda</small>
+              </mat-hint>
+            </mat-form-field>
           </div>
 
-          <div class="innerhldr" *ngIf="isDataAvailable" [class.fixmob]="isMobile">
+          <div class="set-12 searchButton">
+            <button type="button" mat-raised-button color="warn" (click)="onSearch(searchFormGroup)"
+              [disabled]="submitted">
+              <small>Buscar</small>
+            </button>
+            <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
+          </div>
+
+          <div class="set-12 innerhldr" *ngIf="isDataAvailable" [class.fixmob]="isMobile">
             <div class="set-12" *ngIf="isNotAssociationAvailable">
               <div class="set-12 listhldr">
                 <p>
-                  <strong> No hay resultados que mostrar.</strong>
+                  <strong>No hay resultados que mostrar.</strong>
                 </p>
                 <p>
-                  Para registrarte deberas acreditar la representación de tu
-                  organización
+                  <small>Para registrarte deberas acreditar la representación de tu organización</small>
                 </p>
               </div>
             </div>
@@ -58,11 +64,12 @@
                       "></small>
                   </p>
                   <div class="set-12 joinButton">
-                    <button *ngIf="association.createdBy === user._id" class="typeMember" type="button" mat-raised-button  color="accent">
-                      <small >Administrador</small>
+                    <button *ngIf="association.createdBy === user._id" class="typeMember" type="button"
+                      mat-raised-button color="accent">
+                      <small>Administrador</small>
                     </button>
-                    <button *ngIf="association.createdBy != user._id" type="button" mat-raised-button color="primary" >
-                      <small >Unirme</small>
+                    <button *ngIf="association.createdBy != user._id" type="button" mat-raised-button color="primary">
+                      <small>Unirme</small>
                     </button>
                   </div>
                 </div>
@@ -71,15 +78,15 @@
           </div>
         </form>
       </div>
-      <mat-hint *ngIf="isNotAssociationAvailable">**Presiona <strong>Registar</strong>
-      </mat-hint>
+
       <div class="set-12 ctrls register" *ngIf="isNotAssociationAvailable">
         <button mat-raised-button color="warn" matStepperNext>
-          <small>Registrar</small>
+          <small>Registrar asociación</small>
         </button>
         <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
       </div>
     </mat-step>
+
     <!-- Step 2 Data Association-->
     <mat-step>
       <div class="set-12 dialog-head">
@@ -123,6 +130,7 @@
         <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
       </div>
     </mat-step>
+
     <!-- Step 2.1-->
     <mat-step>
 
@@ -131,12 +139,7 @@
           <h3>¡Participa!</h3>
         </div>
         <div class="set-2 txt-right">
-          <button
-            type="button"
-            mat-mini-fab
-            color="primary"
-            (click)="killDialog()"
-          >
+          <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
             <mat-icon>cancel</mat-icon>
 
           </button>
@@ -145,7 +148,7 @@
       <div class="set-12 category">
         <p class="txt-center" *ngIf="!viewSubLayouts">
           Selecciona las categorías de tu interés.
-         
+
         </p>
         <p class="txt-center"><mat-icon>touch_app</mat-icon></p>
       </div>
@@ -153,18 +156,13 @@
       <div class="dialog-1" *ngIf="!viewSubLayouts">
         <div class="left-point"></div>
         <div class="categories">
-        <mat-checkbox
-        class="set-12"
-          *ngFor="let layout of layouts"
-          [value]="layout"
-          (change)="updateSelection(layout, $event)"
-          [labelPosition]="labelPosition" 
-        >
-          <span class="checkbox-label">{{ layout.category.name }}</span>
-        </mat-checkbox>
+          <mat-checkbox class="set-12" *ngFor="let layout of layouts" [value]="layout"
+            (change)="updateSelection(layout, $event)" [labelPosition]="labelPosition">
+            <span class="checkbox-label">{{ layout.category.name }}</span>
+          </mat-checkbox>
+        </div>
       </div>
-      </div>
-    
+
       <div class="set-12 ctrls btn-categories">
         <button mat-raised-button color="warn" matStepperPrevious>
           <small>Atras</small>
@@ -204,16 +202,12 @@
       </div>
       <form [formGroup]="dataComercialFormGroup">
 
-        <mat-form-field
-          *ngIf="
+        <mat-form-field *ngIf="
             associationType == '6399e5c7c878ad9b63dde6a2' ||
             associationType == '6399e5c7c878ad9b63dde6a3' ||
             associationType == '6399e5c7c878ad9b63dde6a4'
-          "
-          appearance="outline"
-        >
-          <mat-label
-            *ngIf="
+          " appearance="outline">
+          <mat-label *ngIf="
               associationType == '6399e5c7c878ad9b63dde6a2' ||
 
 
@@ -259,8 +253,7 @@
           </mat-select>
         </mat-form-field>
 
-        <div
-          *ngIf="
+        <div *ngIf="
             associationType == '6399e5c7c878ad9b63dde6a2' ||
 
             associationType == '6399e5c7c878ad9b63dde6a3' ||
@@ -269,8 +262,7 @@
           <button type="button" mat-raised-button color="primary" (click)="file.click()" class="set-8 bwico">
             <!-- <mat-icon><small>attach_file</small></mat-icon> -->
 
-            <small *ngIf="associationType == '6399e5c7c878ad9b63dde6a2'"
-              >Adjuntar <strong>Acta Constitutiva</strong>
+            <small *ngIf="associationType == '6399e5c7c878ad9b63dde6a2'">Adjuntar <strong>Acta Constitutiva</strong>
 
             </small>
             <small *ngIf="
@@ -308,6 +300,7 @@
         <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
       </div>
     </mat-step>
+
     <!--Step 4 que te hace feliz-->
     <mat-step>
       <div class="set-12 dialog-head">
