--- a/src/app/hub/components/association-register/association-register.component.scss
+++ b/src/app/hub/components/association-register/association-register.component.scss
@@ -19,15 +19,17 @@
           .set-12 {
             margin-bottom: 0px;
           }
+
           .joinButton {
             display: flex;
             justify-content: flex-end;
             margin-top: 5px;
-           
+
             button {
               width: 85px;
             }
-            .typeMember{
+
+            .typeMember {
               width: 120px;
             }
 
@@ -35,9 +37,26 @@
         }
       }
     }
+
     .dialog-head {
       margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .set-2 {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
     }
+
     ::ng-deep .mat-horizontal-stepper-header-container {
       display: none !important;
     }
@@ -45,12 +64,22 @@
     .search-hldr {
       .searchButton {
         display: flex;
+        align-items: center;
         justify-content: flex-end;
         margin-top: 5px;
         padding-right: 10px;
-        margin-bottom: 10px;
+        margin: 20px 0 10px 0;
+
+        * {
+          margin: 0;
+        }
+
         button {
           width: 85px;
+        }
+
+        mat-spinner {
+          margin-left: 20px;
         }
       }
     }
@@ -63,13 +92,16 @@
     ::ng-deep .mat-form-field-infix {
       width: 50%;
     }
+
     .addressNum {
       display: flex;
       justify-content: space-between;
+
       mat-form-field {
         width: 49%;
       }
     }
+
     // ::ng-deep .mat-form-field-infix {
     //   width: 130px;
     // }
@@ -85,10 +117,12 @@
     .mat-hint {
       font-size: 13px;
     }
+
     .ctrls,
     .register {
       padding-right: 10px;
     }
+
     .ctrls {
       display: flex;
       align-items: center;
@@ -97,6 +131,7 @@
       * {
         margin: 0;
       }
+
       button {
         margin-top: 10px;
         margin-left: 10px;
@@ -106,6 +141,7 @@
         margin-left: 20px;
       }
     }
+
     .legals {
       margin-top: 20px;
 
@@ -132,62 +168,70 @@
     }
   }
 
- 
- .dialog-1{
-  height: auto;
-  width: 70%;
-  color:  white;
-  background-color: #1e7e7f;
-  position: absolute;
-  top: 170px;
-  left: 60px;
-  border-radius: 5%;
-  padding: 15px;
-  .categories{
-   display: block;
-   .mat-checkbox{
-    margin-top: 10px;
-   }
-   .mat-checkbox:first-child{
-    margin-top: 0;
-   }
-  }
-}
-::ng-deep .mat-checkbox-checked.mat-accent {
-  .mat-checkbox-ripple .mat-ripple-element {
-      background-color: white !important;
+
+  .dialog-1 {
+    height: auto;
+    width: 70%;
+    color: white;
+    background-color: #1e7e7f;
+    position: absolute;
+    top: 170px;
+    left: 60px;
+    border-radius: 5%;
+    padding: 15px;
+
+    .categories {
+      display: block;
+
+      .mat-checkbox {
+        margin-top: 10px;
+      }
+
+      .mat-checkbox:first-child {
+        margin-top: 0;
+      }
+    }
   }
 
-  .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-      background-color:  #1e7e7f  ;
-   }
-}
-
-::ng-deep .mat-checkbox.mat-accent {
-  .mat-checkbox-ripple .mat-ripple-element {
+  ::ng-deep .mat-checkbox-checked.mat-accent {
+    .mat-checkbox-ripple .mat-ripple-element {
       background-color: white !important;
+    }
+
+    .mat-checkbox-background,
+    .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+      background-color: #1e7e7f;
+    }
   }
-}
-.btn-categories{
-  margin-top: 0px;
-  position: absolute;
-  top: 535px;
-  right: 20px;
-}
-.left-point{
-width: 0;
-height: 0;
-border-left: 2vh solid transparent;
-border-right: 2vh solid transparent;
-border-top: 10vh solid #1e7e7f;
-position: absolute;
-top: 45%;
-left: -10%;
-transform: rotate(60deg);
-}
+
+  ::ng-deep .mat-checkbox.mat-accent {
+    .mat-checkbox-ripple .mat-ripple-element {
+      background-color: white !important;
+    }
+  }
+
+  .btn-categories {
+    margin-top: 0px;
+    position: absolute;
+    top: 535px;
+    right: 20px;
+  }
+
+  .left-point {
+    width: 0;
+    height: 0;
+    border-left: 2vh solid transparent;
+    border-right: 2vh solid transparent;
+    border-top: 10vh solid #1e7e7f;
+    position: absolute;
+    top: 45%;
+    left: -10%;
+    transform: rotate(60deg);
+  }
 
   .listhldr {
     margin-top: 10px;
+
     p {
       margin-bottom: 5px;
     }
@@ -222,6 +266,7 @@ transform: rotate(60deg);
       padding-bottom: 0;
     }
   }
+
   .category {
     p {
       .mat-icon {
@@ -229,6 +274,7 @@ transform: rotate(60deg);
       }
     }
   }
+
   .addfile {
     display: flex;
     justify-content: flex-end;
