--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -117,6 +117,16 @@
     border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
     background: #dff1e7;
 
+    .set-2 {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      * {
+        margin: 0;
+      }
+    }
+
     .avatar {
       width: 35px;
       height: 35px;
@@ -140,6 +150,34 @@
   .comlst {
     padding: 15px;
     background: #dff1e7;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    * {
+      margin: 0;
+    }
+
+    .snglcom {
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    .avatar {
+      width: 35px;
+      height: 35px;
+      border-radius: 100%;
+      overflow: hidden;
+      display: block;
+      background: purple;
+      margin-right: 10px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .loading {
@@ -155,8 +193,14 @@
 :host(.fixmobile) {
   margin: 0 !important;
   width: 100%;
+  padding: 0 !important;
 
   .crdlst {
     width: 100% !important;
+    margin: 0 !important;
+
+    mat-card {
+      border-radius: 0 !important;
+    }
   }
 }
