--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -1,13 +1,18 @@
 :host {
-  .fixdesk{
-  width: 100%;
-  float: left;
-  padding: 40px 40px 90px 40px;
-  margin-top: 80px;
-}
-.fixmobile{
-  width: 100%;
-  float: left;
-  padding: 0px;
-}
+  .fixdesk {
+    width: 100%;
+    float: left;
+    padding: 40px 40px 90px 40px;
+    margin-top: 80px;
+  }
+
+  .fixmobile {
+    width: 100%;
+    float: left;
+    padding: 0px;
+  }
+
+  .lst {
+    box-shadow: 0 3px 3px -3px grey;
+  }
 }
