--- a/src/app/testimonials/public-testimonials/public-testimonials.component.html
+++ b/src/app/testimonials/public-testimonials/public-testimonials.component.html
@@ -7,18 +7,27 @@
       <mat-card *ngFor="let card of cards">
         <div class="set-12 crdh">
           <button type="button" class="avatar">
+            <span *ngIf="card.createdBy == null"> A </span>
+            <span
+              *ngIf="
+                card.createdBy != null &&
+                card.createdBy.avatarImage == null &&
+                card.createdBy.firstname == null
+              "
+            >
+              A
+            </span>
+            <span
+              *ngIf="card.createdBy != null && card.createdBy.avatarImage == null"
+            >
+              {{ card.createdBy.firstname | firstword | firstletter
+              }}{{ card.createdBy.lastname | firstword | firstletter }}
+            </span>
             <img
-            src="{{ card.avatarImage }}"
-            alt="{{ card.createdBy.firstname }} {{ card.createdBy.lastname }}"
-            *ngIf="card.avatarImage != null"
-          />
-          <span *ngIf="card.avatarImage == null && card.createdBy == null ">
-            A          </span>
-          
-           <span *ngIf="card.avatarImage == null && card.createdBy != null">
-            {{ card.createdBy.firstname | firstword | firstletter
-            }}{{ card.createdBy.lastname | firstword | firstletter }}
-          </span> 
+              src="{{ card.createdBy.avatarImage }}"
+              alt="{{ card.createdBy.firstname }} {{ card.createdBy.lastname }}"
+              *ngIf="card.createdBy != null && card.createdBy.avatarImage != null"
+            />
           </button>
           <div>
             <p>
