--- a/src/app/testimonials/single-testimonial/single-testimonial.component.scss
+++ b/src/app/testimonials/single-testimonial/single-testimonial.component.scss
@@ -181,7 +181,7 @@
       }
     
       mat-card {
-        padding: 0;
+        padding: 0px 0px 60px 0px;
         border-radius: 0px;
       }
     
