--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -24,6 +24,19 @@
 
   <div class="set-12">
     <table mat-table [dataSource]="dataSource">
+
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? toggleAllRows() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()" disabled>
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" disabled>
+          </mat-checkbox>
+        </td>
+      </ng-container>
       <ng-container matColumnDef="author">
         <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">
@@ -99,10 +112,24 @@
 
   <div class="set-12">
     <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? toggleAllRows() : null" [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()" disabled>
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)" disabled>
+          </mat-checkbox>
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="author">
         <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdBy.firstname }}
+          <span *ngIf="element?.createdBy?.firstname != null">{{ element?.createdBy?.firstname }}</span>
+          <span *ngIf="element?.createdBy?.firstname == null">Anónimo</span>
         </td>
       </ng-container>
 
